--- a/src/Components/Top_Artists/Top_Artists.css
+++ b/src/Components/Top_Artists/Top_Artists.css
@@ -52,8 +52,7 @@
     color: black;
 }
 
-.right .recommendations {
-    /*background: rgba(30,30,30,.2);*/
+.right .top_artists {
     margin: 20px;
     border-radius: 20px;
     background: linear-gradient(rgba(30, 30, 30,.1),rgba(230, 255, 255, .1));
@@ -62,7 +61,7 @@
 
 
 
-.recommendations .title {
+.top_artists .title {
     font-size: 20px;
     margin-bottom: 20px;
     text-align: center;
@@ -78,7 +77,7 @@
     display: none;
 }
 
-.recommendations .r_content > div {
+.top_artists .r_content > div {
     display: flex;
     align-items: flex-start;
     margin: 20px;
@@ -99,11 +98,11 @@
     margin-left: 10px;
 }
 
-.recommendations .r_content img {
+.top_artists .r_content img {
     width: 65px;
 }
 
-.recommendations .r_content > div p:first-child{
+.top_artists .r_content > div p:first-child{
     font-size: 18px ;
     font-weight: bold;
 }
@@ -119,7 +118,7 @@
 }
 
 
-.recommendations .r_content > div p:last-child{
+.top_artists .r_content > div p:last-child{
     font-size: 12px;
     margin-top: 5px;
     color: dimgray!important;
